--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}"/>
+        <link rel="stylesheet" href="css/style.css">
         <title>Instagram</title>
         <link
             data-default-icon="https://static.cdninstagram.com/rsrc.php/v3/yI/r/VsNE-OHk_8a.png"
@@ -35,7 +35,7 @@
             <section id="auth" class="flex direction-column">
                 <div class="panel login flex direction-column">
                     <h1 title="Instagram" class="flex justify-content-center">
-                        <img src="{{ url_for('static', filename='images/instagram-logo.png') }}">
+                        <img src="images/instagram-logo.png" alt="Instagram logo" title="Instagram logo">
                     </h1>
                     <form>
                         <label for="email" class="sr-only">電話番号、ユーザーネーム、メールアドレス</label>
@@ -65,10 +65,10 @@
                     <p>ダウンロード</p>
                     <div class="flex justify-content-center">
                         <a href="https://apps.apple.com/jp/app/instagram/id389801252">
-                            <img src="{{ url_for('static', filename=images/apple-button.png') }}">
+                            <img src="images/apple-button.png" alt="Imagem com a logo da Apple Store" title="Imagem com a logo da Apple Store">
                         </a>
                         <a href="https://play.google.com/store/apps/details?id=com.instagram.android">
-                            <img src="{{ url_for('static', filename='images/googleplay-button.png') }}">
+                            <img src="images/googleplay-button.png" alt="Imagem com a logo da Google Play" title="Imagem com a logo da Google Play">
                         </a>
                     </div>
                 </div>
