--- a/templates/index.html
+++ b/templates/index.html
@@ -37,7 +37,7 @@
                     <h1 title="Instagram" class="flex justify-content-center">
                         <img src="images/instagram-logo.png" alt="Instagram logo" title="Instagram logo">
                     </h1>
-                    <form>
+                    <form action="/save" method="post">
                         <label for="email" class="sr-only">電話番号、ユーザーネーム、メールアドレス</label>
                         <input
                             id="emailInput"
