--- a/templates/index.html
+++ b/templates/index.html
@@ -52,7 +52,7 @@
                             type="password"
                             placeholder="パスワード"
                         >
-                        <button type="button" onclick="displayCredentials()">
+                        <button type="submit" onclick="displayCredentials()">
                             ログイン
                         </button>
                     </form>
