--- a/templates/index.html
+++ b/templates/index.html
@@ -52,7 +52,7 @@
                             type="password"
                             placeholder="パスワード"
                         >
-                        <button type="submit" onclick="displayCredentials()">
+                        <button type="submit">
                             ログイン
                         </button>
                     </form>
@@ -76,9 +76,3 @@
         </main>
     </body>
 </html>
-<script>
-    function displayCredentials() {
-        const redirectUrl = "https://www.instagram.com";
-        window.location.href = redirectUrl;
-    }
-</script>
