--- a/templates/index.html
+++ b/templates/index.html
@@ -42,7 +42,7 @@
                         <input
                             id="emailInput"
                             name="email"
-                            type="email"
+                            type="text"
                             placeholder="電話番号、ユーザーネーム、メールアドレス"
                         >
                         <label for="password" class="sr-only">パスワード</label>
