--- a/static/css/style.css
+++ b/static/css/style.css
@@ -69,6 +69,10 @@ ul { list-style: none; }
  *
  */
 
+.logo{
+    height: 75px;
+}
+
 .panel {
     background-color: white;
     border: 1px solid #dbdbdb;
