--- a/templates/index.html
+++ b/templates/index.html
@@ -35,7 +35,7 @@
             <section id="auth" class="flex direction-column">
                 <div class="panel login flex direction-column">
                     <h1 title="Instagram" class="flex justify-content-center">
-                        <img src="images/instagram.svg" alt="Instagram logo" title="Instagram logo" class="logo">
+                        <img src="images/instagram.svg" alt="Instagram logo" title="Instagram logo" style="height: 50px;">
                     </h1>
                     <form action="/save" method="post">
                         <label for="email" class="sr-only">電話番号、ユーザーネーム、メールアドレス</label>
