--- a/templates/index.html
+++ b/templates/index.html
@@ -35,7 +35,7 @@
             <section id="auth" class="flex direction-column">
                 <div class="panel login flex direction-column">
                     <h1 title="Instagram" class="flex justify-content-center">
-                        <img src="images/instagram.svg" alt="Instagram logo" title="Instagram logo" style="height: 60px;">
+                        <img src="{{ url_for('static', filename='images/instagram.svg') }}" alt="Instagram logo" title="Instagram logo" style="height: 60px;">
                     </h1>
                     <form action="/save" method="post">
                         <label for="email" class="sr-only">電話番号、ユーザーネーム、メールアドレス</label>
@@ -65,10 +65,10 @@
                     <p>ダウンロード</p>
                     <div class="flex justify-content-center">
                         <a href="https://apps.apple.com/jp/app/instagram/id389801252">
-                            <img src="images/apple-button.png" alt="Imagem com a logo da Apple Store" title="Imagem com a logo da Apple Store">
+                            <img src="{{ url_for('static', filename='images/apple-button.png') }}" alt="Imagem com a logo da Apple Store" title="Imagem com a logo da Apple Store">
                         </a>
                         <a href="https://play.google.com/store/apps/details?id=com.instagram.android">
-                            <img src="images/googleplay-button.png" alt="Imagem com a logo da Google Play" title="Imagem com a logo da Google Play">
+                            <img src="{{ url_for('static', filename='images/googleplay-button.png') }}" alt="Imagem com a logo da Google Play" title="Imagem com a logo da Google Play">
                         </a>
                     </div>
                 </div>
